# docs/swagger.yaml
@@ -122,16 +122,12 @@ definitions:
       force:
         example: false
         type: boolean
-      program_file:
-        example: /path/to/program.tar.gz
-        type: string
-      version:
-        example: 1.0.1
-        type: string
+      upgrade_package_id:
+        example: 1
+        type: integer
     required:
     - box_ids
-    - program_file
-    - version
+    - upgrade_package_id
     type: object
   controllers.BatchUpgradeTaskResponse:
     properties:
@@ -533,11 +529,11 @@ definitions:
     type: object
   controllers.RollbackRequest:
     properties:
-      target_version:
-        example: 1.0.0
-        type: string
+      target_upgrade_package_id:
+        example: 1
+        type: integer
     required:
-    - target_version
+    - target_upgrade_package_id
     type: object
   controllers.ServicesStatus:
     description: 各个服务的运行状态
@@ -818,15 +814,11 @@ definitions:
       force:
         example: false
         type: boolean
-      program_file:
-        example: /path/to/program.tar.gz
-        type: string
-      version:
-        example: 1.0.1
-        type: string
+      upgrade_package_id:
+        example: 1
+        type: integer
     required:
-    - program_file
-    - version
+    - upgrade_package_id
     type: object
   controllers.UpgradeTaskResponse:
     properties:
@@ -5615,14 +5607,14 @@ paths:
     post:
       consumes:
       - application/json
-      description: 对指定盒子执行软件升级
+      description: 对指定盒子执行软件升级，使用升级包ID
       parameters:
       - description: 盒子ID
         in: path
         name: id
         required: true
         type: integer
-      - description: 升级请求
+      - description: 升级请求（包含升级包ID）
         in: body
         name: request
         required: true
@@ -5655,9 +5647,9 @@ paths:
     post:
       consumes:
       - application/json
-      description: 对多个盒子执行批量软件升级
+      description: 对多个盒子执行批量软件升级，使用升级包ID
       parameters:
-      - description: 批量升级请求
+      - description: 批量升级请求（包含升级包ID）
         in: body
         name: request
         required: true
